{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 31,
  "lineage": "d3a3b188-c4c9-0dc1-ad15-6cd209826a07",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-03T04:54:42.534-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/massive-sandbox-477717-k3/global/firewalls/dev-network-dev-allow-http",
            "log_config": [],
            "name": "dev-network-dev-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/global/networks/dev-network-dev",
            "params": [],
            "priority": 1000,
            "project": "massive-sandbox-477717-k3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/global/firewalls/dev-network-dev-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-03T04:54:42.471-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/massive-sandbox-477717-k3/global/firewalls/dev-network-dev-allow-https",
            "log_config": [],
            "name": "dev-network-dev-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/global/networks/dev-network-dev",
            "params": [],
            "priority": 1000,
            "project": "massive-sandbox-477717-k3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/global/firewalls/dev-network-dev-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-12-03T04:54:42.445-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/massive-sandbox-477717-k3/global/firewalls/dev-network-dev-allow-internal",
            "log_config": [],
            "name": "dev-network-dev-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/global/networks/dev-network-dev",
            "params": [],
            "priority": 1000,
            "project": "massive-sandbox-477717-k3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/global/firewalls/dev-network-dev-allow-internal",
            "source_ranges": [
              "10.0.0.0/24",
              "10.0.1.0/24",
              "10.0.10.0/24",
              "10.0.11.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-03T04:54:42.470-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/massive-sandbox-477717-k3/global/firewalls/dev-network-dev-allow-ssh",
            "log_config": [],
            "name": "dev-network-dev-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/global/networks/dev-network-dev",
            "params": [],
            "priority": 1000,
            "project": "massive-sandbox-477717-k3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/global/firewalls/dev-network-dev-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "description": "Primary VPC for dev workloads",
            "enable_ula_internal_ipv6": false,
            "id": "projects/massive-sandbox-477717-k3/global/networks/dev-network-dev",
            "mtu": 0,
            "name": "dev-network-dev",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "4167283513417894932",
            "numeric_id": "4167283513417894932",
            "project": "massive-sandbox-477717-k3",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/global/networks/dev-network-dev"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-03T04:54:43.322-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/massive-sandbox-477717-k3/regions/asia-south1/routers/dev-network-dev-router",
            "name": "dev-network-dev-router",
            "network": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/global/networks/dev-network-dev",
            "project": "massive-sandbox-477717-k3",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/regions/asia-south1/routers/dev-network-dev-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "massive-sandbox-477717-k3/asia-south1/dev-network-dev-router/dev-network-dev-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "dev-network-dev-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "massive-sandbox-477717-k3",
            "region": "asia-south1",
            "router": "dev-network-dev-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/regions/asia-south1/subnetworks/private-a-dev",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              },
              {
                "name": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/regions/asia-south1/subnetworks/private-b-dev",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_subnetwork.private"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-03T04:54:43.645-08:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.10.1",
            "id": "projects/massive-sandbox-477717-k3/regions/asia-south1/subnetworks/private-a-dev",
            "ip_cidr_range": "10.0.10.0/24",
            "name": "private-a-dev",
            "network": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/global/networks/dev-network-dev",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "massive-sandbox-477717-k3",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/regions/asia-south1/subnetworks/private-a-dev",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 6074663671934324220
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-03T04:54:44.427-08:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.11.1",
            "id": "projects/massive-sandbox-477717-k3/regions/asia-south1/subnetworks/private-b-dev",
            "ip_cidr_range": "10.0.11.0/24",
            "name": "private-b-dev",
            "network": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/global/networks/dev-network-dev",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "massive-sandbox-477717-k3",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/regions/asia-south1/subnetworks/private-b-dev",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 470032419271839227
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-03T04:54:45.963-08:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.0.1",
            "id": "projects/massive-sandbox-477717-k3/regions/asia-south1/subnetworks/public-a-dev",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "public-a-dev",
            "network": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/global/networks/dev-network-dev",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "massive-sandbox-477717-k3",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/regions/asia-south1/subnetworks/public-a-dev",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 6377103049736687098
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-03T04:54:43.894-08:00",
            "enable_flow_logs": false,
            "gateway_address": "10.0.1.1",
            "id": "projects/massive-sandbox-477717-k3/regions/asia-south1/subnetworks/public-b-dev",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "public-b-dev",
            "network": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/global/networks/dev-network-dev",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "massive-sandbox-477717-k3",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/massive-sandbox-477717-k3/regions/asia-south1/subnetworks/public-b-dev",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 8584975930783272444
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}